[package]
name = "ziom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["derive"]}
confy = { version = "0.5.1", fetures = ["derive"] }
serde = "1.0.158"
serde_derive = "1.0.158"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
